--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -8,3 +8,22 @@ html {
 code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono;
 }
+
+.crt{
+    color: black;
+    filter: drop-shadow(0px 0px 0.125rem red);
+    -webkit-mask-image: repeating-linear-gradient(black, black 2px, transparent 3px);
+  animation: retro-future-tv-lines linear infinite;
+    animation-duration: 4s; 
+}
+
+@keyframes retro-future-tv-lines {
+    0% {
+      -webkit-mask-position: center 0rem;
+      mask-position: center 0rem;
+    }
+    100% {
+      -webkit-mask-position: center -1.5rem;
+      mask-position: center -1.5rem;
+    }
+}
