--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,11 +19,11 @@ const posts = entries.items.map((item) => {
 ---
 
 <Layout title="WhatFor">
-	<main class="space-y-3 mx-auto max-w-lg">
+	<main class="space-y-4 mx-auto max-w-lg">
 		<h1 class="text-4xl crt">CY_blog</h1>
 		{
 			posts.map((post) => (
-				<ul data-augmented-ui="both tr-clip bl-clip" class="">
+				<ul data-augmented-ui="both tr-clip bl-clip " class="p-32">
 					<h2 class="text-2xl underline">{post.title}</h2>
 					<time class="bg-blue-200 text-blue-800 rounded-full px-2 pt-0.5 pb-1 text-sm font-bold">
 						{post.date}
