--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,15 +20,16 @@ const posts = entries.items.map((item) => {
 
 <Layout title="WhatFor">
 	<main class="space-y-4 mx-auto max-w-lg">
-		<h1 class="text-4xl crt">CY_blog</h1>
+		<h1 class="text-4xl crt font-bold">CY_blog</h1>
 		{
 			posts.map((post) => (
 				<ul data-augmented-ui="both tr-clip bl-clip " class="p-8">
 					<h2 class="text-2xl underline">{post.title}</h2>
-					<time class="bg-blue-200 text-blue-800 rounded-full px-2 pt-0.5 pb-1 text-sm font-bold">
+					<time class="bg-amber-600 px-2 pt-0.5 pb-1 text-sm ">
 						{post.date}
 					</time>
 					<p>{post.content}</p>
+					<p>{post.tagging}</p>
 				</ul>
 			))
 		}
