--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const posts = entries.items.map((item) => {
 						{post.date}
 					</time>
 					<p>{post.content}</p>
-					<p>{post.tagging}</p>
+					<div class="bg-amber-600 px-2 p-1 pr-4 ">{post.tagging}</div>
 				</ul>
 			))
 		}
