--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,17 +19,19 @@ const posts = entries.items.map((item) => {
 ---
 
 <Layout title="CY_blog">
-	<main class="space-y-4  mx-auto max-w-3xl mx-4">
+	<main class="space-y-4  mx-auto max-w-3xl ">
 		<h1 class="text-5xl crt font-bold text-center">CY_blog</h1>
 		{
 			posts.map((post) => (
-				<ul data-augmented-ui="inlay tr-clip bl-clip " class="p-8">
-					<h2 class="text-2xl underline">{post.title}</h2>
+				<ul data-augmented-ui="inlay tr-clip bl-clip " class="p-8 mx-4">
+					<div>
+						<h2 class="text-2xl underline inline-block">{post.title}</h2>
 					<time class="bg-amber-600 px-2 pt-1 pb-1 text-sm rounded-lg float-right">
 						{post.date}
 					</time>
+				</div>
 					<p>{post.content}</p>
-					<div class="bg-amber-600 px-2 p-1 pr-4 ">{post.tagging}</div>
+					<div class="bg-yellow-400 px-2 p-1 pr-4 ">{post.tagging}</div>
 				</ul>
 			))
 		}
