--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const posts = entries.items.map((item) => {
 
 					<p>{post.content}</p>
 					
-					<div class="bg-yellow-400 px-2 pt-1 pb-1 text-sm rounded-lg px-2 p-1 pr-4 display-block">
+					<div data-augmented-ui="l-clip tr-clip br-clip" class="bg-black text-yellow-400 text-sm py-1 px-5">
 						{post.tagging}
 					</div>
 					<time class=" text-sm text-sky-700 display-block">
