--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,13 +1,14 @@
 
 html {
     font-family: 'Exo 2', sans-serif;
-    background-color: #F6F6F6;
+    background-color: rgb(250 204 21);
 }
 
 
 code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono;
 }
+
 
 .crt{
     color: black;
