--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,23 +1,99 @@
 
 html {
     font-family: 'Exo 2', sans-serif;
-    background-color: rgb(250 204 21);
+    background-color: black;
+    color: rgb(255 200 255 / 0.8);
+    text-shadow: 0 0 5px rebeccapurple;
+
 }
+
 
 
 code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono;
+
 }
 
 
+.text-blue{
+    color: #61e2ff;
+    text-shadow: 0 0 2px #001716, 0 0 5px #03edf933, 0 0 10px #ffff6633;
+}
+
 .crt{
-    color: black;
-    filter: drop-shadow(0px 0px 0.125rem red);
+    filter: drop-shadow(0px 0px 0.125rem pink);
     -webkit-mask-image: repeating-linear-gradient(black, black 2px, transparent 3px);
   animation: retro-future-tv-lines linear infinite;
     animation-duration: 4s; 
 }
 
+
+.time-stamp{
+    font-family: monospace;   
+
+    --aug-tr1:6px;
+    --aug-tl1:18px;
+    --aug-bl1:6px;
+    --aug-br1:6px;
+    --aug-inlay-bg:rgba(220, 220, 220, 0.2);
+    --aug-border-bg:rgba(20, 20, 20, 0.3);
+
+}
+.container{
+    --aug-tl1: 12px;
+    --aug-tl2: 18px;
+
+
+    --aug-tl1: 12px;
+    --aug-tl2: 18px;
+    --aug-tl-extend2:(100% - 150px);
+
+    --aug-tr:8px;
+
+    --aug-r-extend1:20px;
+    --aug-r:12px; 
+    --aug-r-center:47px; 
+
+    --aug-l: 2px;
+    --aug-l-center:68px;
+
+
+
+
+ 
+    --aug-br1: 8px;
+
+
+
+
+
+}
+.x{
+
+}
+
+
+.card{
+    background: repeating-linear-gradient(
+        to top,
+        rgba(255, 255, 255, 0.03) 0px 2px,
+        transparent 2px 4px
+      ),
+      linear-gradient(to bottom, #200933 75%, #3d0b43);
+      --glow-margin: 70px;
+    filter: drop-shadow(0 0 75px rgb(128 0 255 / 0.25));
+    --aug-border-bg: red;
+}
+
+.glow-container {
+  inset: 4px;
+  z-index: 2;
+  --glow: drop-shadow(0 0 1px violet);
+  filter: var(--glow) brightness(1.4) drop-shadow(0 0 10px violet);
+}
+  
+
+  
 @keyframes retro-future-tv-lines {
     0% {
       -webkit-mask-position: center 0rem;
