--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -19,6 +19,9 @@ code {
     color: #61e2ff;
     text-shadow: 0 0 2px #001716, 0 0 5px #03edf933, 0 0 10px #ffff6633;
 }
+.text-pink{
+    text-shadow: 0 0 2px #393a33, 0 0 35px #ffffff44, 0 0 10px #fc199a, 0 0 2px #fc199a;
+}
 
 .crt{
     filter: drop-shadow(0px 0px 0.125rem pink);
@@ -34,11 +37,18 @@ code {
     --aug-tr1:6px;
     --aug-tl1:18px;
     --aug-bl1:6px;
-    --aug-br1:6px;
+    --aug-br1:4px;
     --aug-inlay-bg:rgba(220, 220, 220, 0.2);
     --aug-border-bg:rgba(20, 20, 20, 0.3);
+    text-shadow: 0 0 2px #393a33, ;
 
 }
+
+
+.tags{
+    --aug-border-bg:green;
+}
+
 .container{
     --aug-tl1: 12px;
     --aug-tl2: 18px;
@@ -50,27 +60,19 @@ code {
 
     --aug-tr:8px;
 
-    --aug-r-extend1:20px;
-    --aug-r:12px; 
-    --aug-r-center:47px; 
-
     --aug-l: 2px;
     --aug-l-center:68px;
-
-
-
-
  
+    --aug-r: 4px;
+    --aug-r-center:36px;
+
     --aug-br1: 8px;
 
-
-
-
-
+    --aug-br1: 12px;
+    --aug-br2: 18px;
+    --aug-br-extend2:(120px);
 }
-.x{
 
-}
 
 
 .card{
