--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,18 +19,19 @@ const posts = entries.items.map((item) => {
 ---
 
 <Layout title="CY_blog">
-	<main class="space-y-4  mx-auto max-w-3xl ">
-		<h1 class="text-5xl crt font-bold text-center text-blue">CY_blog</h1>
+	<main class="h-screen w-screen">
+		<div data-augmented-ui="" class=" space-y-4  mx-auto max-w-3xl px-2">
+		<h1 class="text-5xl crt font-bold text-center font-extralight py-2">CY_blorg</h1>
 		{
 			posts.map((post) => (
 				<ul data-augmented-ui="tr-clip br-2-clip-x tr-clip bl-clip both l-clip-xy r-clip-y tl-2-clip-x " class="container">
 
 					<div class="glow-container pt-8 pb-2 px-5 card" data-augmented-ui="">
-						<h2 class="text-2xl text-blue inline-block mb-2">{post.title}</h2>
+						<h2 class="font-black text-2xl text-blue inline-block mb-2">{post.title}</h2>
 
 					<p class="mb-2">{post.content}</p>
 				</div>
-					<div data-augmented-ui=" br-clip both" class="mb-6 bg-teal-900 text-sm py-4 px-5 pr-8 text-pink bg-transparent">
+					<div data-augmented-ui=" br-clip border" class="font-black mb-6 bg-teal-900 text-sm py-4 px-5 pr-8 text-pink bg-transparent">
 						{post.tagging}
 					</div>
 
@@ -41,5 +42,7 @@ const posts = entries.items.map((item) => {
 				</ul>
 			))
 		}
+		</div>
+		<div class="background h-screen w-screen crt">a</div>
 	</main>
 </Layout>
