testing reduced styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const posts = entries.items.map((item) => {
 		<h1 class="text-5xl crt font-bold text-center font-extralight py-2">CY_blorg</h1>
 		{
 			posts.map((post) => (
-				<ul data-augmented-ui="tr-clip br-2-clip-x tr-clip bl-clip both l-clip-xy r-clip-y tl-2-clip-x " class="container">
+				<ul data-augmented-ui="tr-clip br-2-clip-x tr-clip bl-clip both l-clip-y r-clip-y tl-2-clip-x " class="container">
 
 					<div class="glow-container pt-8 pb-2 px-5 card" data-augmented-ui="">
 						<h2 class="font-black text-2xl text-blue inline-block mb-2">{post.title}</h2>
@@ -43,6 +43,6 @@ const posts = entries.items.map((item) => {
 			))
 		}
 		</div>
-		<div class="background h-screen w-screen crt">a</div>
+		<div class="crt">a</div>
 	</main>
 </Layout>
