--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -93,8 +93,8 @@ code {
 
     --aug-tr:8px;
 
-    --aug-l: 2px;
-    --aug-l-center:68px;
+    --aug-l: 4px;
+    --aug-l-center:(100% - 50px);
  
     --aug-r: 4px;
     --aug-r-center:36px;
