--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const posts = entries.items.map((item) => {
 ---
 
 <Layout title="CY_blog">
-	<main class="h-screen w-screen">
+	<main class="">
 		<div data-augmented-ui="" class=" space-y-4  mx-auto max-w-3xl px-2">
 		<h1 class="text-5xl crt font-bold text-center font-extralight py-2">CY_blorg</h1>
 		{
@@ -43,6 +43,6 @@ const posts = entries.items.map((item) => {
 			))
 		}
 		</div>
-		<div class="crt">a</div>
+		<!-- <div class="backgrounds h-screen w-screen crt">a</div> --> 
 	</main>
 </Layout>
