--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+    min-height: 100vh;
     background: linear-gradient(183deg, rgba(141,35,46,0.5) 1%, rgba(141,35,46,0) 60%), 
                 linear-gradient(250deg, rgba(141,35,46,0) 21%, rgba(141,35,46,0.2) 20%, rgba(11,35,47,0.2) 50%),
                 linear-gradient(250deg, rgba(141,35,46,0) 23%, rgba(141,35,46,0.2) 20%, rgba(11,35,47,0.2) 50%),
@@ -38,8 +39,6 @@ body {
 
 code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono;
-
-    
 
 }
 
